# algorithm_workspace

./: .editorconfig  .gitignore  README.md  TODO.md  package.json  tsconfig.json
cpp/: .editorconfig  CMakeLists.txt  interactive.cpp.template  leetcode.cpp.template  solution.cpp.template
cpp/tdzl/: common.hpp  common_lc.hpp
cpp/tdzl/bits/: bittrie.hpp  common.hpp  linear_base.hpp
cpp/tdzl/ds/: bitset.hpp  fenwick.hpp  lazy_segtree.hpp  reduce_range.hpp  segtree.hpp  segtree_2d.hpp
cpp/tdzl/graph/: dsu.hpp  farest_from.hpp  internal_csr.hpp  max_flow.hpp  min_cost_flow.hpp  nd_constant_graph.hpp  tree.hpp  tree_dp_with_parents.hpp
cpp/tdzl/input/: multiquery_3.hpp
cpp/tdzl/knapsack/: 01.hpp
cpp/tdzl/main/: multicase.hpp  singlecase.hpp
cpp/tdzl/math/: common.hpp  crt.hpp  dynamic_modint.hpp  floor_sum.hpp  inv_gcd.hpp  prime_list.hpp  primitive_root.hpp  static_matrix.hpp  static_modint.hpp
cpp/tdzl/polynomial/: convolution.hpp  online_conv.hpp
cpp/tdzl/string/: acauto.hpp  all.hpp  hash.hpp  join.hpp  sa.hpp  split.hpp  trie.hpp
cpp/tdzl/utility/: binsearch.hpp  custom_hash.hpp  divideconquer.hpp  logtrick.hpp  map.hpp  md_vector.hpp  memo.hpp  mo_algo.hpp  vector.hpp  view.hpp
cpp/tests/: run.cmd
scripts/: bundle.ts
